Created a few listing commands, implemented ListFilteredBugsCommand, added getters for bugs, strories, feedbacks in repository, other minor modifications.